log
Thu, May 15, 2025  5:31:52 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Thu, May 15, 2025  5:52:07 PM: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:53:7: error: unused variable 'k' [-Werror=unused-variable]
   int k = 0;
       ^
cc1.exe: all warnings being treated as errors
2923e56
Thu, May 15, 2025  5:52:16 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
d1d1f05
Thu, May 15, 2025  5:53:29 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6bf9c7
Thu, May 15, 2025  5:59:29 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ef4fb8d
